[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metasyn-disclosure"
authors = [
    {name = "Raoul Schram", email = "r.d.schram@uu.nl"},
]
description = "Plugin package for metasyn that applies the disclosure control."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["metasyn", "disclosure control"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"metasyn",
	"polars",
	"numpy>=1.20",
	"matplotlib",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["metasyncontrib"]

[project.entry-points."metasyn.distribution_provider"]
metasyn-disclosure = "metasyncontrib.disclosure.provider:DisclosureProvider"
