[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metasyn-disclosure"
authors = [
    {name = "Raoul Schram", email = "r.d.schram@uu.nl"},
	{name = "Erik-Jan van Kesteren", email = "e.vankesteren1@uu.nl"},
]
description = "Plugin package for metasyn that applies the disclosure control."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["metasyn", "disclosure control"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"metasyn",
	"polars",
	"numpy>=1.20",
	"matplotlib",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["metasyncontrib"]

[project.entry-points."metasyn.distribution_provider"]
metasyn-disclosure = "metasyncontrib.disclosure.provider:DisclosureProvider"

[project.entry-points."metasyn.privacy"]
disclosure = "metasyncontrib.disclosure.privacy:DisclosurePrivacy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["D", "E", "F", "UP", "B", "SIM", "I", "N"]
ignore = ["D203", "D213", "D206", "E501", "UP007"]