[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metasyn-disclosure"
authors = [
    {name = "Raoul Schram", email = "r.d.schram@uu.nl"},
	{name = "Erik-Jan van Kesteren", email = "e.vankesteren1@uu.nl"},
]
description = "Plugin package for metasyn that applies the disclosure control."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["metasyn", "disclosure control", "metadata", "open-data", "privacy", "synthetic-data"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"metasyn>=1.0.3",
	"polars",
    "numpy>=1.20;python_version<'3.12'",
    "numpy>1.24.4;python_version>='3.12'"
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
	"ruff",
	"mypy", 
	"pytest"
]

examples = [
    "matplotlib",
    "seaborn"
]

[tool.setuptools]
packages = ["metasyncontrib", "metasyncontrib.disclosure"]

[project.entry-points."metasyn.distribution_provider"]
metasyn-disclosure = "metasyncontrib.disclosure.provider:DisclosureProvider"

[project.entry-points."metasyn.privacy"]
disclosure = "metasyncontrib.disclosure.privacy:DisclosurePrivacy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["C", "D", "E", "F", "UP", "B", "SIM", "I", "N", "W"]
ignore = ["D203", "D213", "D206", "UP007"]